# mcpgawk

./: .gitignore  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THREAT-MODEL.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  mcpgawk-gate-selftest.yml  publish-openvsx.yml  publish-pypi.yml
assets/brand/: identity-board.html
docs/: CNAME  index.html  logofield.js  report.html  styles.css
docs/api/: lead.js
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package.json
examples/: mcp.json
scripts/: ci_gate.py
src/mcpgawk/: __init__.py  ambient.py  cli.py  consent.py  discover.py  drift.py  fingerprint.py  fleet.py  grade.py  history.py  label.py  mcp_server.py  measure.py  oauth_login.py  oauth_scopes.py  probe.py  redact.py  servercard.py  signals.py  supplychain.py  transport.py
supabase/: leads.sql  lockdown.sql
tests/: test_ambient.py  test_cli_integration.py  test_drift.py  test_drift_invariants.py  test_grade.py  test_label_axes.py  test_layer_invariants.py  test_mcp_server.py  test_measure.py  test_no_egress.py  test_oauth_scopes.py  test_servercard.py  test_signals.py  test_supplychain.py  test_thin_guidance.py
