[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpgawk"
version = "0.1.2"
description = "A local-first CLI that measures what an MCP server costs and what it can do. Nothing leaves your machine."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Neelagiri" }]
keywords = ["mcp", "model-context-protocol", "security", "tokens", "local-first", "llm", "agents", "tokenizer", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]
dependencies = [
    "mcp>=1.28,<2",      # official protocol client — version-negotiated, tracks the spec
    "tiktoken>=0.7",     # named cost-index tokenizer (cl100k); honestly labelled, not Claude-exact
    "httpx>=0.27",       # well-known Server Card fetch (also a transitive mcp dep; pinned explicitly)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://mcp.gawk.dev"
Documentation = "https://mcp.gawk.dev"
Repository = "https://github.com/gawk-dev/mcpgawk"
Issues = "https://github.com/gawk-dev/mcpgawk/issues"

[project.scripts]
mcpgawk = "mcpgawk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpgawk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
